--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -49,11 +49,6 @@ body {
 	padding: 10px 10px 10px 10px;
 }
 
-#nav {
-	width: 180px;
-	float: left;
-}
-
 #main {
 	width: 600px;
 	float: right;
@@ -69,4 +64,28 @@ body {
 
 #pagenav {
 	clear: both;
+}
+
+.topnav {
+    background-color: black;
+    overflow: hidden;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a:active {
+  background-color: #4CAF50;
+  color: white;
 }
